main.css
:root {
  --PrimaryColor: #004e92;
  --SecondaryColor: #adadad;
  --ParagraphColor: #444444;
}

::-webkit-scrollbar {
  width: 0px;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html,
body {
  font-family: Arial, Helvetica, sans-serif;
}
  span {
    font-weight: 800;
    color: var(--PrimaryColor);
    text-transform: uppercase;
  }
  img {
    height: 100%;
    max-width: 210px;
  }
  nav {
    height: 10vh;
    padding: 10px 40px;
    background: var(--SecondaryColor);
    color: var(--PrimaryColor);
  }
  nav h1 {
    text-transform: uppercase;
    font-weight: bold;
  }
  
  input[type='submit'] {
    border: none;
    border: 1.5px solid var(--PrimaryColor);
    background-color: var(--PrimaryColor);
    border-radius: 30px;
    padding: 5px 15px 3.5px 15px;
    color: var(--SecondaryColor);
    letter-spacing: 2px;
    cursor: pointer;
    font-weight: 700;
    outline: none;
    text-transform: uppercase;
    transition: all 0.3s;
  }
  input[type='submit']:hover {
    background-color: var(--SecondaryColor);
    color: var(--PrimaryColor);
  }
  
  .container {
    width: 70%;
    margin: auto;
  }
  .flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  
  #showcase,
  #twoDays,
  #saturday,
  #objectives,
  #join {
    cursor: default;
    height: 35vh;
    position: relative;
    padding: 10px 30px 40px 10px;
  }
  #showcase,
  #join {
    height: 40vh;
  }
  #twoDays::before,
  #saturday::before,
  #objectives::before {
    position: absolute;
    content: '';
    width: 300px;
    height: 2px;
    background: var(--PrimaryColor);
    top: 15px;
  }
  #saturday::before {
    right: 0;
  }
  #showcase p {
    font-size: 35px;
    text-transform: capitalize;
    min-width: 250px;
    max-width: 450px;
  }
  #twoDays {
    padding: 40px 30px 20px 10px;
  }
  #twoDays::after {
    right: 0;
  }
  #twoDays p,
  #saturday p,
  #objectives p {
    min-width: 250px;
    max-width: 400px;
    color: #444444;
    font-size: 20px;
  }
  #join {
    justify-content: space-evenly;
  }
  .link {
    text-align: center;
  }
  .link p {
    font-size: 3vw;
    margin-bottom: 20px;
    text-transform: uppercase;
  }
  /* this is just for the hover effect */
  .bounce span {
    display: inline-block;
  }
  
  .grow {
  animation: crazy 1s cubic-bezier(0.165, 0.84, 0.44, 1);
  }
  
  @keyframes crazy{
  0%{
    transform: rotate(360deg) scale(1.2);
    color: var(--PrimaryColor);
  }
  50%{  transform: rotate(0deg) scale(1.4);
    color: var(--SecondaryColor);}
  100%{
    transform: rotate(0) scale(1);
    color: var(--PrimaryColor);
  }
  
  }
  /* mobile responsive  */
@media only screen and (max-width: 760px) {
  nav h1 {
    text-transform: uppercase;
    font-size: 4vw;
    font-weight: 100;
    text-align: center;
  }
  #showcase {
    justify-content: center;
  }
  #showcase img, #join img{
    position: absolute;
    align-content: center;
    max-width: 70vw !important;
    filter: blur(4px) opacity(.5);
  }
  #showcase p {
    text-align: center;
    width: 70vw;
  }
  #twoDays, #saturday, #objectives {
    flex-direction: column-reverse;
    border: 2px solid rgba(0, 81, 255, 0.596);
    padding: 45px;
    display: flex;
    margin-top: 10vh;
    justify-content: center;
    align-content: center;
  }
  #twoDays img,
  #objectives img
   {
     position: absolute;
    top: -30px;
    left: -15px;
    background:white;
    height: 70px;
    width: 70px;
  }
  #saturday img {
    position: absolute;
    top: -30px;
    right: -15px;
    background:white;
    height: 70px;
    width: 70px;
  }
  #join .link{
    font-size: 4vw
  }
  #join img {
    max-width: 50vw !important;
  }
  #twoDays::before,
  #saturday::before,
  #objectives::before {
    display: none;
  }
}
span {
  color: var(--PrimaryColor);
  text-transform: uppercase;
}
img {
  height: 100%;
  max-width: 210px;
}
nav {
  height: 75px;
  padding: 10px 40px;
  background: var(--SecondaryColor);
  color: var(--PrimaryColor);
}
nav h1 {
  text-transform: uppercase;
  font-weight: 100;
}

input[type='submit'] {
  border: none;
  border: 1.5px solid var(--PrimaryColor);
  background-color: var(--PrimaryColor);
  border-radius: 30px;
  padding: 5px 15px 3.5px 15px;
  color: var(--SecondaryColor);
  letter-spacing: 2px;
  cursor: pointer;
  font-weight: 700;
  outline: none;
  text-transform: uppercase;
  transition: all 0.3s;
}
input[type='submit']:hover {
  background-color: var(--SecondaryColor);
  color: var(--PrimaryColor);
}

.container {
  width: 70%;
  margin: auto;
}
.flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#showcase,
#twoDays,
#saturday,
#objectives,
#join {
  height: 245px;
  position: relative;
}
#showcase,
#join {
  height: 300px;
}
#twoDays::before,
#saturday::before,
#objectives::before {
  position: absolute;
  content: '';
  width: 300px;
  height: 2px;
  background: var(--PrimaryColor);
  top: 15px;
}
#saturday::before {
  right: 0;
}
#showcase p {
  font-size: 35px;
  text-transform: capitalize;
  min-width: 250px;
  max-width: 450px;
}
#twoDays {
  padding: 40px 30px 20px 10px;
}
#twoDays::after {
  right: 0;
}
#twoDays p,
#saturday p,
#objectives p {
  min-width: 250px;
  max-width: 400px;
  color: #444444;
  font-size: 20px;
}
#join {
  justify-content: space-evenly;
}
.link {
  text-align: center;
}
.link p {
  font-size: 4vw;
  margin-bottom: 20px;
  text-transform: uppercase;
}

